contrib/k8s/manifest.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: playmusic
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: playmusic-deployment
  namespace: playmusic
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: playmusic
  template:
    metadata:
      labels:
        app: playmusic
    spec:
      containers:
        - name: playmusic
          image: ghcr.io/hensi01/play-music:0.49.3
          ports:
            - containerPort: 4533
          volumeMounts:
            - name: data
              mountPath: /data
            - name: music
              mountPath: /music
              readOnly: true
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: playmusic-data-pvc
        - name: music
          hostPath:
            path: /path/to/your/music/on/the/host
            type: Directory
---
apiVersion: v1
kind: Service
metadata:
  name: playmusic-service
  namespace: playmusic
spec:
  type: ClusterIP
  ports:
    - name: http
      targetPort: 4533
      port: 4533
      protocol: TCP
  selector:
    app: playmusic
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: playmusic-ingress
  namespace: playmusic
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
    - host: playmusic.${SECRET_INTERNAL_DOMAIN_NAME}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: playmusic-service
                port:
                  number: 4533
  tls:
    - hosts:
        - playmusic.${SECRET_INTERNAL_DOMAIN_NAME}
      secretName: playmusic-tls
